fixed: overflow text

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -92,7 +92,7 @@
     color: $text
     margin-top: 0
     margin-bottom: 56px
-    max-height: 150px
+    max-height: 200px
     overflow: auto
 .button
   &__buy
